# Doomsday-RS

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.frontend  Makefile  README.md  build.rs  codebase.glue  ddayconfig.yml  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
frontend/: .eslintrc.json  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/dashboard/: CertificateTable.tsx  StatsCards.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts
src/: auth.rs  backends.rs  cache.rs  config.rs  core.rs  duration.rs  error.rs  lib.rs  notifications.rs  scheduler.rs  server.rs  storage.rs  types.rs  version.rs
src/storage/: credhub.rs  opsmgr.rs  tlsclient.rs  vault.rs
