[package]
name = "doomsday-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "doomsday-server"
path = "src/bin/server.rs"

[[bin]]
name = "doomsday-cli"
path = "src/bin/cli.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["multipart", "tower-log"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
rustls = "0.21"
tokio-rustls = "0.24"
webpki-roots = "0.25"
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "5.5"
sha1 = "0.10"
hex = "0.4"
x509-parser = "0.15"
sha2 = "0.10"
base64 = "0.21"
url = "2.4"
async-trait = "0.1"
regex = "1.0"
once_cell = "1.0"
rust-crypto = "0.2"
jsonwebtoken = "9.0"
bcrypt = "0.15"
slack-hook = "0.8"
cron = "0.12"
futures = "0.3"
tabled = "0.15"
rpassword = "7.0"
dotenvy = "0.15"
dirs = "5.0"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.0"